# HKV-Cuda2AscendC

./: .gitignore  README.md  cuda-to-ascendc-simt-migration-guide.md
HierarchicalKV-ascend/: CLAUDE.md  CMakeLists.txt  README.md  main.cpp  run.sh
HierarchicalKV-ascend/benchmark/: benchmark_util.h  hkv_hashtable_benchmark.cpp
HierarchicalKV-ascend/cmake/: cpu_lib.cmake  npu_lib.cmake
HierarchicalKV-ascend/hkv_hashtable/clear_kernel/: clear_kernel.cpp
HierarchicalKV-ascend/hkv_hashtable/clear_kernel/v35/: clear_kernel.h
HierarchicalKV-ascend/hkv_hashtable/dump_kernel/: dump_kernel.cpp
HierarchicalKV-ascend/hkv_hashtable/dump_kernel/v35/: dump_kernel.h
HierarchicalKV-ascend/hkv_hashtable/find_and_update_kernel/: find_and_update_kernel.cpp  find_and_update_kernel_with_filter.cpp
HierarchicalKV-ascend/hkv_hashtable/find_and_update_kernel/v35/: find_and_update_kernel.h  find_and_update_kernel_with_filter.h
HierarchicalKV-ascend/hkv_hashtable/find_or_insert_ptr_kernel_lock_key/: find_or_insert_ptr_kernel_lock_key.cpp
HierarchicalKV-ascend/hkv_hashtable/find_or_insert_ptr_kernel_lock_key/v35/: find_or_insert_ptr_kernel_lock_key.h
HierarchicalKV-ascend/hkv_hashtable/init_table_kernel/: allocate_bucket_others_kernel.cpp  create_atomic_keys_kernel.cpp  create_atomic_scores_kernel.cpp  get_bucket_others_address_kernel.cpp  init_table_kernel.cpp
HierarchicalKV-ascend/hkv_hashtable/init_table_kernel/v35/: init_table_kernel.h
HierarchicalKV-ascend/hkv_hashtable/insert_and_evict_kernel/: insert_and_evict_kernel.cpp
HierarchicalKV-ascend/hkv_hashtable/insert_and_evict_kernel/v35/: insert_and_evict_kernel.h
HierarchicalKV-ascend/hkv_hashtable/rehash_kernel/: rehash_kernel.cpp
HierarchicalKV-ascend/hkv_hashtable/rehash_kernel/v35/: rehash_kernel.h
HierarchicalKV-ascend/hkv_hashtable/upsert_with_io_kernel/: upsert_with_io_kernel.cpp
HierarchicalKV-ascend/hkv_hashtable/upsert_with_io_kernel/v35/: upsert_with_io_kernel.h
HierarchicalKV-ascend/hkv_hashtable/utils_kernel/: host_nano_kernel.cpp  read_from_ptr_kernel.cpp
HierarchicalKV-ascend/hkv_hashtable/utils_kernel/v35/: utils_kernel.h
HierarchicalKV-ascend/include/: aclnn_helper.h  allocator.h  bucket_memory_pool_manager.h  cuda2npu.h  debug.h  hashtable_options.h  hkv_hashtable.h  memory_pool.h  score_functor.h  simt_vf_dispatcher.h  table.h  types.h  utils.h
HierarchicalKV-ascend/tests/: CMakeLists.txt  test_aclnn_helper.cpp  test_assign_scores.cpp  test_basic_properties.cpp  test_bucket_memory_pool.cpp  test_export_batch.cpp  test_find_and_update.cpp  test_find_or_insert.cpp  test_find_or_insert_evict_strategies.cpp  test_find_ptr.cpp  test_hkv_hashtable.cpp  test_insert_and_evict.cpp  test_insert_or_assign.cpp  test_load.cpp  test_reserve.cpp  test_save.cpp  test_util.h
HierarchicalKV-ascend/tests/test_score_functor/: test_desired_when_missed_kernel.cpp  test_score_functor.cpp  test_update_kernel.cpp  test_update_with_digest_kernel.cpp  test_update_without_missed_bucket_kernel.cpp  test_update_without_missed_ptr_kernel.cpp
HierarchicalKV-ascend/tests/test_score_functor/v35/: test_score_functor_kernel.h
agents/: HKV-Migration.md  hkv-codegen-workflow.md  hkv-verification-agent.md
skills/ascendc-kernel-generator/: SKILL.md
skills/ascendc-kernel-generator/references/: ascendc-simt-patterns.md  hkv-data-structures.md
skills/cuda-kernel-analyzer/: SKILL.md
skills/cuda-kernel-analyzer/references/: ascendc-simt-patterns.md  hkv-data-structures.md
